crates/rskit-media-ffmpeg/tests/snapshots/golden__command_compile_extract_many_filters.snap
---
source: crates/rskit-media-ffmpeg/tests/golden.rs
expression: "&args"
---
[
  "-y",
  "-loglevel",
  "warning",
  "-progress",
  "pipe:2",
  "-ss",
  "00:00:00.000",
  "-t",
  "5.000",
  "-i",
  "/dev/null",
  "-ss",
  "00:00:10.000",
  "-t",
  "5.000",
  "-i",
  "/dev/null",
  "-ss",
  "00:00:20.000",
  "-t",
  "5.000",
  "-i",
  "/dev/null",
  "-filter_complex",
  "[0:v][0:a][1:v][1:a][2:v][2:a]concat=n=3:v=1:a=1[outv][outa]",
  "-map",
  "[outv]",
  "-map",
  "[outa]"
]
